# phototools

./: .gitattributes  CMakeLists.txt  NOTES.md  README.md  TODO.md  float_xtrans.cpp  image.h  main.cpp  raw_image.cpp  raw_image.h  vcpkg.json
src/engine/core/: color.cpp  color.h  image.cpp  image.h
src/engine/core/math/: matrix.cpp  matrix.h
